🚀 SERLF v5 — $1 for everything, full customer flow
Kill the tiers. One price. Everything included.

Flow: Landing → Google OAuth → Stripe $1/mo → Welcome → Full Dashboard

- 12 products, all unlocked at $1
- 32 Novel Patterns (expanded from 15)
- Live Stripe Payment Links + Billing Portal
- Google OAuth integrated
- 8 domain sites with $1 messaging
- 10-tab Fleet Control dashboard
- Navy dark theme unified
- Zero backend, zero frameworks

NP-L1-021: Kill the Tiers
The meek shall inherit the enterprise. 🇨🇦🧅⚓

--- a/club/index.html
+++ b/club/index.html
@@ -2,107 +2,75 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>SERLF Club — The Fleet. Graduate. Join. Lead.</title>
-<meta name="description" content="SERLF community hub. The Fleet alumni network, leaderboards, events, and community.">
+<title>SERLF — The SERLF Community</title>
+<meta name="description" content="SERLF Join the Fleet. Fleet Command, Community, Events. All for $1/month.">
 <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
 <header class="site-header"><div class="header-inner">
-<div class="logo">SERLF<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">Club</span></div>
+<div class="logo">SERLF<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">Join the Fleet</span></div>
 <nav>
-<a href="https://serlf.ca">.ca</a><a href="https://serlf.com">.com</a><a href="https://serlf.org">.org</a><a href="https://serlf.net">.net</a><a href="https://serlf.info">.info</a><a href="https://serlf.club" class="active">.club</a><a href="https://serlf.shop">.shop</a><a href="https://serlf.store">.store</a>
+<a href="https://serlf.ca">.ca</a>
+<a href="https://serlf.com">.com</a>
+<a href="https://serlf.org">.org</a>
+<a href="https://serlf.net">.net</a>
+<a href="https://serlf.info">.info</a>
+<a href="https://serlf.club" class="active">.club</a>
+<a href="https://serlf.shop">.shop</a>
+<a href="https://serlf.store">.store</a>
 </nav>
 </div></header>
 
 <section class="hero">
-<h1>Graduate. Join. Lead.</h1>
-<p class="tagline">The Fleet — SERLF's alumni and community network. Learn together, build together, grow together.</p>
+<p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">Join the Fleet</p>
+<h1>The SERLF Community.<br>Without the Enterprise Price.</h1>
+<div class="price">$1<span>/mo</span></div>
+<p class="tagline">Part of the SERLF suite — $1/mo gets you everything. Fleet Command, Community, Events.</p>
 <div class="flex-center mt-2">
-<a href="#join" class="btn btn-primary">Join The Fleet</a>
-<a href="#leaderboard" class="btn btn-secondary">Leaderboards</a>
+<a href="https://serlf.ca/login.html" class="btn btn-gold">Get Everything — $1/mo</a>
+<a href="https://serlf.ca" class="btn btn-secondary">Explore serlf.ca</a>
 </div>
 </section>
 
 <section>
 <div class="container">
-<h2 class="section-title">The Fleet</h2>
-<p class="section-sub">From student to sovereign operator. Every graduate joins The Fleet.</p>
+<h2 class="section-title">Become the enterprise.</h2>
+<p class="section-sub">12 products. 30+ Novel Patterns. Zero tiers. Zero paywalls. One dollar.</p>
 <div class="grid grid-3">
-<div class="card text-center">
-<div class="icon">🎓</div>
-<h3>Academy Graduates</h3>
-<p>Complete SERLF Academy challenges and earn your place in The Fleet.</p>
-<p style="font-size:2rem;font-weight:900;color:var(--gold);margin-top:1rem">—</p>
-<p style="color:var(--fg2);font-size:.8rem">graduates (launching soon)</p>
+<div class="card"><div class="icon">🔐</div><h3>Silo-as-a-Service</h3><p>Day 0 security. 6/6 silo score.</p></div>
+<div class="card"><div class="icon">🎖️</div><h3>Fleet Command</h3><p>Multi-agent orchestration.</p></div>
+<div class="card"><div class="icon">🐝</div><h3>Token Swarm</h3><p>87% cost savings. Smart routing.</p></div>
+<div class="card"><div class="icon">🚀</div><h3>Model Gateway</h3><p>9 providers, 1 endpoint.</p></div>
+<div class="card"><div class="icon">🌀</div><h3>Novel Patterns</h3><p>30+ production patterns.</p></div>
+<div class="card"><div class="icon">🪪</div><h3>Identity Fabric</h3><p>Zero-trust AI identity.</p></div>
 </div>
-<div class="card text-center">
-<div class="icon">🏗️</div>
-<h3>Active Builders</h3>
-<p>Community members actively building on the SERLF platform.</p>
-<p style="font-size:2rem;font-weight:900;color:var(--gold);margin-top:1rem">—</p>
-<p style="color:var(--fg2);font-size:.8rem">builders (launching soon)</p>
-</div>
-<div class="card text-center">
-<div class="icon">⚓</div>
-<h3>Fleet Admirals</h3>
-<p>Community leaders, mentors, and top contributors.</p>
-<p style="font-size:2rem;font-weight:900;color:var(--gold);margin-top:1rem">—</p>
-<p style="color:var(--fg2);font-size:.8rem">admirals (launching soon)</p>
-</div>
+<div class="text-center mt-2">
+<a href="https://serlf.ca" class="btn btn-primary">See All 12 Products →</a>
 </div>
 </div>
 </section>
 
-<section id="leaderboard" style="background:var(--bg2)">
-<div class="container">
-<h2 class="section-title">Leaderboards</h2>
-<p class="section-sub">Top performers across the SERLF ecosystem.</p>
-<div class="card" style="max-width:600px;margin:0 auto;text-align:center">
-<div class="icon">🏆</div>
-<h3>Coming Soon</h3>
-<p>Academy challenge leaderboards, contribution rankings, and fleet performance metrics launching with SERLF Academy.</p>
-<span class="tag">Q2 2026</span>
-</div>
-</div>
-</section>
-
-<section>
-<div class="container">
-<h2 class="section-title">Community Events</h2>
-<div class="grid grid-2">
-<div class="card">
-<div class="icon">🎙️</div>
-<h3>Fleet Calls</h3>
-<p>Monthly community calls. Product updates, demos, Q&A with the team. Open to all members.</p>
-<span class="tag">Monthly</span>
-</div>
-<div class="card">
-<div class="icon">⚡</div>
-<h3>Build Jams</h3>
-<p>48-hour build events. Pick a challenge, build a solution, share with The Fleet. Prizes in store credit.</p>
-<span class="tag">Quarterly</span>
-</div>
-</div>
-</div>
-</section>
-
-<section id="join" style="background:var(--bg2)">
-<div class="container text-center">
-<h2 class="section-title">Connect</h2>
-<p class="section-sub">Find your people.</p>
-<div class="flex-center" style="gap:2rem">
-<a href="#" class="btn btn-secondary">💬 Discord</a>
-<a href="https://github.com/eose-sre" class="btn btn-secondary">🐙 GitHub</a>
-<a href="#" class="btn btn-secondary">📧 Newsletter</a>
-</div>
+<section style="background:var(--bg2)">
+<div class="container text-center" style="padding:3rem 0">
+<p style="color:var(--gold);font-size:1.2rem;font-weight:600;margin-bottom:1rem">Part of the SERLF suite — $1/mo gets you everything</p>
+<p style="color:var(--fg2);max-width:600px;margin:0 auto 2rem">No tiers. No paywalls. No upsells. Every product, every feature, every pattern. The meek way.</p>
+<a href="https://serlf.ca/login.html" class="btn btn-gold">Get Started — $1/mo</a>
 </div>
 </section>
 
 <footer class="site-footer"><div class="footer-inner">
 <div class="footer-links">
-<a href="https://serlf.ca">serlf.ca</a><a href="https://serlf.com">serlf.com</a><a href="https://serlf.org">serlf.org</a><a href="https://serlf.net">serlf.net</a><a href="https://serlf.info">serlf.info</a><a href="https://serlf.club">serlf.club</a><a href="https://serlf.shop">serlf.shop</a><a href="https://serlf.store">serlf.store</a>
+<a href="https://serlf.ca">Home</a>
+<a href="https://serlf.ca/app.html">Dashboard</a>
+<a href="https://serlf.com">.com</a>
+<a href="https://serlf.org">.org</a>
+<a href="https://serlf.net">.net</a>
+<a href="https://serlf.info">.info</a>
+<a href="https://serlf.club">.club</a>
+<a href="https://serlf.shop">.shop</a>
+<a href="https://serlf.store">.store</a>
 </div>
-<p class="footer-bottom">🍁 Built in Canada · EOSE · © 2026 SERLF</p>
+<div class="footer-bottom">SERLF · by EOSE · 🇨🇦 Toronto · $1/mo for everything</div>
 </div></footer>
 </body>
 </html>
