--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>SERLF — Become the Enterprise. $1/mo AI Platform 🇨🇦</title>
-<meta name="description" content="SERLF: Sovereign enterprise reinforcement learning framework. All AI tools, $1/month. Built in Canada.">
+<title>SERLF — Become the Enterprise. $1/mo.</title>
+<meta name="description" content="Enterprise AI sovereignty for everyone. All 12 products. $1/month. The meek way.">
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <header class="site-header"><div class="header-inner">
 <div class="logo">SERLF<span class="maple">🍁</span></div>
 <nav>
-<a href="https://serlf.ca" class="active">.ca</a>
+<a href="/">.ca</a>
 <a href="https://serlf.com">.com</a>
 <a href="https://serlf.org">.org</a>
 <a href="https://serlf.net">.net</a>
@@ -18,125 +18,142 @@
 <a href="https://serlf.club">.club</a>
 <a href="https://serlf.shop">.shop</a>
 <a href="https://serlf.store">.store</a>
+<a href="/login.html" id="nav-auth">Sign In</a>
 </nav>
 </div></header>
 
 <section class="hero">
-<p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">🇨🇦 Canadian AI Platform</p>
-<h1>Become the Enterprise.</h1>
-<p class="tagline">Your sovereign AI fleet. Your keys. Your models. Your rules. Everything you need to run enterprise AI — for the price of a coffee.</p>
+<p style="font-size:.9rem;color:var(--fg2);margin-bottom:.5rem">🇨🇦 Canadian-built sovereign AI</p>
+<h1>Become the enterprise.</h1>
 <div class="price">$1<span>/mo</span></div>
+<p class="tagline">12 products. 30+ Novel Patterns. Fleet command. Identity fabric. Token routing. Security mesh. Everything. One dollar.</p>
 <div class="flex-center mt-2">
-<a href="#products" class="btn btn-primary">See What's Included</a>
-<a href="#pricing" class="btn btn-secondary">Get Started</a>
+<a href="/login.html" class="btn btn-gold" id="hero-cta">Get Everything — $1/mo</a>
+<a href="#products" class="btn btn-secondary">See What's Included</a>
+</div>
+</section>
+
+<section style="padding:2rem 1.5rem">
+<div class="container">
+<div style="display:flex;justify-content:center;gap:2.5rem;flex-wrap:wrap;text-align:center">
+<div><span style="font-size:2rem;font-weight:900;color:var(--gold);display:block">12</span><span style="font-size:.8rem;color:var(--fg2)">Products</span></div>
+<div><span style="font-size:2rem;font-weight:900;color:var(--gold);display:block">30+</span><span style="font-size:.8rem;color:var(--fg2)">Novel Patterns</span></div>
+<div><span style="font-size:2rem;font-weight:900;color:var(--gold);display:block">6/6</span><span style="font-size:.8rem;color:var(--fg2)">Silo Score</span></div>
+<div><span style="font-size:2rem;font-weight:900;color:var(--gold);display:block">8</span><span style="font-size:.8rem;color:var(--fg2)">Domains</span></div>
+<div><span style="font-size:2rem;font-weight:900;color:var(--gold);display:block">$1</span><span style="font-size:.8rem;color:var(--fg2)">Everything</span></div>
+</div>
 </div>
 </section>
 
 <section id="products">
 <div class="container">
-<h2 class="section-title">The Complete Suite</h2>
-<p class="section-sub">Six products. One dollar. No compromises.</p>
+<h2 class="section-title">Everything Included</h2>
+<p class="section-sub">No tiers. No paywalls. No upsells. Every product, every feature, every pattern. $1.</p>
 <div class="grid grid-3">
 
-<a href="https://serlf.ca/#academy" class="card" style="text-decoration:none;color:inherit">
-<div class="icon">🎓</div>
-<h3>SERLF Academy</h3>
-<p>Learn AI by doing. Reinforcement loops, sandboxes, agent playgrounds. Graduate from consumer to sovereign operator.</p>
-<span class="tag">Learning Platform</span>
-</a>
-
-<a href="https://serlf.com" class="card" style="text-decoration:none;color:inherit">
-<div class="icon">🐝</div>
-<h3>Token Swarm</h3>
-<p>BYOK intelligent routing. Never overpay for AI again. Failover, cost caps, multi-provider orchestration.</p>
-<span class="tag">Cost Control</span>
-</a>
-
-<a href="https://serlf.com/#pemos" class="card" style="text-decoration:none;color:inherit">
-<div class="icon">⚓</div>
-<h3>PEMOS</h3>
-<p>Sovereign AI fleet management. The enterprise product — run your own AI infrastructure without the enterprise price.</p>
-<span class="tag">Enterprise</span>
-</a>
-
-<a href="#pricing" class="card" style="text-decoration:none;color:inherit">
-<div class="icon">🧅</div>
-<h3>Meek Starter Kit</h3>
-<p>$1 gets you in. Everything included — no tiers, no paywalls, no "contact sales." The meek shall inherit the enterprise.</p>
-<span class="tag">$1 Onboarding</span>
-</a>
-
-<a href="https://serlf.net" class="card" style="text-decoration:none;color:inherit">
-<div class="icon">🧪</div>
-<h3>The Lab</h3>
-<p>Cutting-edge tools. Experimental agents, bleeding-edge models, research sandboxes. Where tomorrow's AI lives today.</p>
-<span class="tag">Experimental</span>
-</a>
-
-<a href="https://serlf.net/#fleet" class="card" style="text-decoration:none;color:inherit">
-<div class="icon">🎛️</div>
-<h3>Fleet Control</h3>
-<p>Admiral dashboard. Monitor, manage, and command your entire AI fleet from a single pane of glass.</p>
-<span class="tag">Dashboard</span>
-</a>
+<div class="card"><div class="icon">🔐</div><h3>Silo-as-a-Service</h3><p>Turnkey Day 0 security. MI, KV, mTLS, mesh, RBAC — deployed in minutes. SCORE 6/6.</p></div>
+<div class="card"><div class="icon">🎖️</div><h3>Fleet Command</h3><p>Multi-agent orchestration. Captains, Nanos, unlimited tiers. Sovereign command layer.</p></div>
+<div class="card"><div class="icon">🕸️</div><h3>The Net</h3><p>Isolation mesh. Sovereignty for every workload. Zero blast radius architecture.</p></div>
+<div class="card"><div class="icon">🌀</div><h3>Novel Pattern Engine</h3><p>30+ emergent patterns from production. Discovered, rated, evolved. Self-organizing.</p></div>
+<div class="card"><div class="icon">⚡</div><h3>The Router</h3><p>Fleet nervous system. 6 shapes. Intent routing. Real-time telemetry.</p></div>
+<div class="card"><div class="icon">🪪</div><h3>Identity Fabric</h3><p>Zero-trust identity for AI agents. Multi-MI. Workload identity federation.</p></div>
+<div class="card"><div class="icon">🔄</div><h3>Loop Monitor</h3><p>Shape detection & behavior analysis. 4 loops tracked. Anomaly alerts.</p></div>
+<div class="card"><div class="icon">🚀</div><h3>Captain Incubator</h3><p>Spin up sovereign AI instances. Full silo from birth. One command deploy.</p></div>
+<div class="card"><div class="icon">🎓</div><h3>SERLF Academy</h3><p>Learn to build self-evolving systems. E&Y partnership. The Meek Curriculum.</p></div>
+<div class="card"><div class="icon">🐝</div><h3>Token Swarm</h3><p>Multi-tier AI token routing. OAuth → Free → API. 87% cost savings. Never burn out.</p></div>
+<div class="card"><div class="icon">🚀</div><h3>Model Gateway</h3><p>Sovereign model control plane. One endpoint, 9 providers, zero key sprawl.</p></div>
+<div class="card"><div class="icon">🏗️</div><h3>Digital Transformation</h3><p>The two principals are the product. 15+ years enterprise. Human + AI navy.</p></div>
 
 </div>
 </div>
 </section>
 
-<section id="pricing" style="background:var(--bg2)">
+<section style="background:var(--bg2)">
 <div class="container">
-<h2 class="section-title">One Price. Everything.</h2>
-<p class="section-sub">No tiers. No enterprise pricing. No "contact sales." Just $1.</p>
 <div class="pricing-box">
-<div class="price">$1<span style="font-size:.3em;color:var(--fg2)">/month</span></div>
-<p style="color:var(--fg2);margin-top:.5rem">CAD. Seriously.</p>
+<p style="color:var(--fg2);margin-bottom:1rem;font-size:.9rem">One plan. Everything.</p>
+<div class="price">$1<span style="font-size:.3em;color:var(--fg2)">/mo</span></div>
 <ul>
-<li>SERLF Academy — full access</li>
-<li>Token Swarm — intelligent routing</li>
-<li>PEMOS — sovereign fleet</li>
-<li>Meek Starter Kit — onboarding</li>
-<li>The Lab — experimental tools</li>
-<li>Fleet Control — admiral dashboard</li>
-<li>Community access (serlf.club)</li>
-<li>API access (serlf.net)</li>
-<li>Marketplace access (serlf.store)</li>
-<li>Your keys. Your data. Your sovereignty.</li>
+<li>All 12 products — full access</li>
+<li>30+ Novel Patterns</li>
+<li>Fleet Command dashboard</li>
+<li>Token Swarm routing</li>
+<li>Identity Fabric + zero-trust</li>
+<li>Model Gateway (9 providers)</li>
+<li>Captain Incubator</li>
+<li>SERLF Academy courses</li>
+<li>Silo-as-a-Service (6/6 score)</li>
+<li>Digital Transformation consulting</li>
+<li>Priority support</li>
+<li>All future products included</li>
 </ul>
-<a href="#" class="btn btn-gold" style="width:100%;text-align:center">Start for $1 →</a>
+<a href="/login.html" class="btn btn-gold" style="width:100%;margin-top:1.5rem">Get Everything — $1/mo</a>
+<p style="color:var(--fg2);font-size:.8rem;margin-top:1rem">Cancel anytime. No contracts. The meek way.</p>
 </div>
 </div>
 </section>
 
 <section>
 <div class="container">
-<h2 class="section-title">The Meek Principle</h2>
-<p class="section-sub">Enterprise AI shouldn't cost enterprise money.</p>
-<div class="grid grid-2">
-<div class="card">
-<h3>🏢 Traditional Enterprise AI</h3>
-<p>$50,000/year minimum. Vendor lock-in. Their keys, their rules, their data. "Contact sales" for pricing. 6-month procurement cycle.</p>
-</div>
-<div class="card" style="border-color:var(--maple)">
-<h3>🧅 The SERLF Way</h3>
-<p>$1/month. Your keys. Open source core. No procurement, no vendor lock-in, no permission needed. Start in 60 seconds.</p>
-</div>
+<h2 class="section-title">The Standard</h2>
+<p class="section-sub">Six principles. No exceptions.</p>
+<div class="grid grid-3">
+<div class="card"><h3>The Meek Principle</h3><p>"All we have, all ways we can use it." Enterprise patterns for everyone. $1.</p></div>
+<div class="card"><h3>No Cowboy Changes</h3><p>Wiki → Kanban → Execute. All or none. The standard is the process.</p></div>
+<div class="card"><h3>No Test, No Ship</h3><p>Tests are the ceremony. If it can't be proven, it can't be trusted.</p></div>
+<div class="card"><h3>Day 0 Security</h3><p>MI, KV, mTLS, least-privilege. Baked in from the first commit.</p></div>
+<div class="card"><h3>Self-Evolving</h3><p>Everything built must improve itself. Novel Patterns feed the system.</p></div>
+<div class="card"><h3>Every Master Meets the Standard</h3><p>No exceptions. No shortcuts. The standard is the floor, not the ceiling.</p></div>
 </div>
 </div>
 </section>
 
-<footer class="site-footer"><div class="footer-inner">
-<div class="footer-links">
-<a href="https://serlf.ca">serlf.ca</a>
-<a href="https://serlf.com">serlf.com</a>
-<a href="https://serlf.org">serlf.org</a>
-<a href="https://serlf.net">serlf.net</a>
-<a href="https://serlf.info">serlf.info</a>
-<a href="https://serlf.club">serlf.club</a>
-<a href="https://serlf.shop">serlf.shop</a>
-<a href="https://serlf.store">serlf.store</a>
+<section style="background:var(--bg2)">
+<div class="container">
+<h2 class="section-title">FAQ</h2>
+<div style="max-width:700px;margin:2rem auto 0">
+<details class="faq-item"><summary>Is it really $1/month for everything?</summary><p>Yes. All 12 products, all Novel Patterns, all features. No tiers, no upsells, no hidden costs. The meek way — enterprise patterns for everyone.</p></details>
+<details class="faq-item"><summary>Why so cheap?</summary><p>Because the standard should be the floor, not a paywall. We're building the infrastructure we wish existed. The $1 covers hosting costs. The value is the community.</p></details>
+<details class="faq-item"><summary>What about Digital Transformation consulting?</summary><p>Included. The two principals (15+ years at TD Canada, Canadian Tire, Westpac) plus the AI fleet. Human + AI navy, available to every subscriber.</p></details>
+<details class="faq-item"><summary>Can I cancel anytime?</summary><p>Yes. No contracts, no lock-in, no exit interviews. Cancel from your account page.</p></details>
+<details class="faq-item"><summary>Is this Canadian?</summary><p>🇨🇦 Born and built in Canada. EOSE (Toronto). The fleet flies the maple leaf.</p></details>
 </div>
-<p class="footer-bottom">🍁 Built in Canada · EOSE · Off the grid. On the chain. · © 2026 SERLF</p>
-</div></footer>
+</div>
+</section>
+
+<footer class="site-footer">
+<div class="footer-inner">
+<div class="footer-links">
+<a href="/">Home</a>
+<a href="/app.html">Dashboard</a>
+<a href="/dashboard.html">Fleet Control</a>
+<a href="https://serlf.com">Enterprise</a>
+<a href="https://serlf.org">Community</a>
+<a href="https://serlf.net">Infrastructure</a>
+<a href="mailto:kewinjoffe@gmail.com">Contact</a>
+</div>
+<div class="footer-bottom">
+SERLF · by EOSE · 🇨🇦 Toronto · Founded Valentine's Day 2026<br>
+<em>"Time is forever. This is our infinity."</em>
+</div>
+</div>
+</footer>
+
+<script src="auth.js"></script>
+<script>
+// Update nav if logged in
+if (SERLF_AUTH.isAuthenticated()) {
+  const el = document.getElementById('nav-auth');
+  const u = SERLF_AUTH.getUser();
+  el.textContent = u ? u.given_name || u.name.split(' ')[0] : 'Dashboard';
+  el.href = '/app.html';
+  document.querySelectorAll('#hero-cta, .pricing-box .btn-gold').forEach(b => {
+    if (SERLF_AUTH.isSubscribed()) {
+      b.textContent = 'Go to Dashboard';
+      b.href = '/app.html';
+    }
+  });
+}
+</script>
 </body>
 </html>
