--- a/info/index.html
+++ b/info/index.html
@@ -2,89 +2,75 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>SERLF — Knowledge Base: What is Sovereign Enterprise AI?</title>
-<meta name="description" content="Learn about sovereign enterprise AI, reinforcement learning, BYOK, and the SERLF framework. FAQ, guides, and articles.">
+<title>SERLF — Knowledge & Documentation</title>
+<meta name="description" content="SERLF Learn Everything. Academy, Patterns, Architecture Docs. All for $1/month.">
 <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
 <header class="site-header"><div class="header-inner">
-<div class="logo">SERLF<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">Knowledge</span></div>
+<div class="logo">SERLF<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">Learn Everything</span></div>
 <nav>
-<a href="https://serlf.ca">.ca</a><a href="https://serlf.com">.com</a><a href="https://serlf.org">.org</a><a href="https://serlf.net">.net</a><a href="https://serlf.info" class="active">.info</a><a href="https://serlf.club">.club</a><a href="https://serlf.shop">.shop</a><a href="https://serlf.store">.store</a>
+<a href="https://serlf.ca">.ca</a>
+<a href="https://serlf.com">.com</a>
+<a href="https://serlf.org">.org</a>
+<a href="https://serlf.net">.net</a>
+<a href="https://serlf.info" class="active">.info</a>
+<a href="https://serlf.club">.club</a>
+<a href="https://serlf.shop">.shop</a>
+<a href="https://serlf.store">.store</a>
 </nav>
 </div></header>
 
 <section class="hero">
-<h1>What is Sovereign Enterprise?</h1>
-<p class="tagline">The knowledge base for understanding AI sovereignty, reinforcement learning, and why the future of enterprise costs $1/month.</p>
+<p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">Learn Everything</p>
+<h1>Knowledge & Documentation.<br>Without the Enterprise Price.</h1>
+<div class="price">$1<span>/mo</span></div>
+<p class="tagline">Part of the SERLF suite — $1/mo gets you everything. Academy, Patterns, Architecture Docs.</p>
+<div class="flex-center mt-2">
+<a href="https://serlf.ca/login.html" class="btn btn-gold">Get Everything — $1/mo</a>
+<a href="https://serlf.ca" class="btn btn-secondary">Explore serlf.ca</a>
+</div>
 </section>
 
 <section>
 <div class="container">
-<h2 class="section-title">Articles</h2>
-<p class="section-sub">Deep dives into the SERLF philosophy and technology.</p>
+<h2 class="section-title">Become the enterprise.</h2>
+<p class="section-sub">12 products. 30+ Novel Patterns. Zero tiers. Zero paywalls. One dollar.</p>
 <div class="grid grid-3">
-<div class="card">
-<span class="tag">Philosophy</span>
-<h3 style="margin-top:.75rem">The Meek Shall Inherit the Enterprise</h3>
-<p>Why $1/month AI is not a loss leader — it's the business model. An exploration of radical accessibility in enterprise software.</p>
-<p style="color:var(--fg2);font-size:.8rem;margin-top:1rem">📅 Coming Soon · 8 min read</p>
+<div class="card"><div class="icon">🔐</div><h3>Silo-as-a-Service</h3><p>Day 0 security. 6/6 silo score.</p></div>
+<div class="card"><div class="icon">🎖️</div><h3>Fleet Command</h3><p>Multi-agent orchestration.</p></div>
+<div class="card"><div class="icon">🐝</div><h3>Token Swarm</h3><p>87% cost savings. Smart routing.</p></div>
+<div class="card"><div class="icon">🚀</div><h3>Model Gateway</h3><p>9 providers, 1 endpoint.</p></div>
+<div class="card"><div class="icon">🌀</div><h3>Novel Patterns</h3><p>30+ production patterns.</p></div>
+<div class="card"><div class="icon">🪪</div><h3>Identity Fabric</h3><p>Zero-trust AI identity.</p></div>
 </div>
-<div class="card">
-<span class="tag">Technical</span>
-<h3 style="margin-top:.75rem">BYOK: Bring Your Own Keys</h3>
-<p>How Token Swarm's BYOK architecture eliminates vendor lock-in and puts you in control of your AI spend.</p>
-<p style="color:var(--fg2);font-size:.8rem;margin-top:1rem">📅 Coming Soon · 12 min read</p>
-</div>
-<div class="card">
-<span class="tag">Guide</span>
-<h3 style="margin-top:.75rem">From Consumer to Sovereign Operator</h3>
-<p>The SERLF Academy learning path: how reinforcement loops transform AI users into AI operators.</p>
-<p style="color:var(--fg2);font-size:.8rem;margin-top:1rem">📅 Coming Soon · 6 min read</p>
-</div>
-<div class="card">
-<span class="tag">Architecture</span>
-<h3 style="margin-top:.75rem">PEMOS: The Sovereign Fleet</h3>
-<p>Understanding PEMOS architecture — how sovereign AI fleets work and why they matter for data privacy.</p>
-<p style="color:var(--fg2);font-size:.8rem;margin-top:1rem">📅 Coming Soon · 15 min read</p>
-</div>
-<div class="card">
-<span class="tag">Opinion</span>
-<h3 style="margin-top:.75rem">Off the Grid, On the Chain</h3>
-<p>What it means to run AI infrastructure that you truly own. Decentralization, sovereignty, and the future.</p>
-<p style="color:var(--fg2);font-size:.8rem;margin-top:1rem">📅 Coming Soon · 10 min read</p>
-</div>
-<div class="card">
-<span class="tag">Canadian</span>
-<h3 style="margin-top:.75rem">Why Canada? Why Now?</h3>
-<p>Canada's AI ecosystem, data sovereignty laws, and why SERLF is proudly Canadian-built.</p>
-<p style="color:var(--fg2);font-size:.8rem;margin-top:1rem">📅 Coming Soon · 7 min read</p>
-</div>
+<div class="text-center mt-2">
+<a href="https://serlf.ca" class="btn btn-primary">See All 12 Products →</a>
 </div>
 </div>
 </section>
 
-<section id="faq" style="background:var(--bg2)">
-<div class="container">
-<h2 class="section-title">FAQ</h2>
-<p class="section-sub">Common questions, straight answers.</p>
-<div style="max-width:700px;margin:0 auto">
-<details class="faq-item"><summary>Is it really $1/month?</summary><p>Yes. $1 CAD/month. No hidden fees, no usage caps for basic access, no "enterprise tier." We believe sovereign AI should be accessible to everyone.</p></details>
-<details class="faq-item"><summary>What does SERLF stand for?</summary><p>Sovereign Enterprise Reinforcement Learning Framework. Also: SELF + RL = SERLF. You learn, you grow, you become the enterprise.</p></details>
-<details class="faq-item"><summary>What does "Bring Your Own Keys" mean?</summary><p>You use your own API keys from providers like OpenAI, Anthropic, Google, etc. SERLF routes and manages — but your keys mean your data stays yours and you control costs directly.</p></details>
-<details class="faq-item"><summary>Is SERLF open source?</summary><p>The core framework is open source. Visit <a href="https://serlf.org">serlf.org</a> for our repos and contribution guides.</p></details>
-<details class="faq-item"><summary>How is this sustainable at $1/month?</summary><p>BYOK means we don't pay for your AI compute. Our infrastructure costs are minimal. Volume makes up the rest. The meek business model works.</p></details>
-<details class="faq-item"><summary>Can I use SERLF for my company?</summary><p>Absolutely. Visit <a href="https://serlf.com">serlf.com</a> for enterprise solutions. Same $1/month per seat.</p></details>
-<details class="faq-item"><summary>Where is my data stored?</summary><p>With BYOK, your data flows through your own provider accounts. SERLF stores minimal metadata. Your keys, your data, your sovereignty.</p></details>
-</div>
+<section style="background:var(--bg2)">
+<div class="container text-center" style="padding:3rem 0">
+<p style="color:var(--gold);font-size:1.2rem;font-weight:600;margin-bottom:1rem">Part of the SERLF suite — $1/mo gets you everything</p>
+<p style="color:var(--fg2);max-width:600px;margin:0 auto 2rem">No tiers. No paywalls. No upsells. Every product, every feature, every pattern. The meek way.</p>
+<a href="https://serlf.ca/login.html" class="btn btn-gold">Get Started — $1/mo</a>
 </div>
 </section>
 
 <footer class="site-footer"><div class="footer-inner">
 <div class="footer-links">
-<a href="https://serlf.ca">serlf.ca</a><a href="https://serlf.com">serlf.com</a><a href="https://serlf.org">serlf.org</a><a href="https://serlf.net">serlf.net</a><a href="https://serlf.info">serlf.info</a><a href="https://serlf.club">serlf.club</a><a href="https://serlf.shop">serlf.shop</a><a href="https://serlf.store">serlf.store</a>
+<a href="https://serlf.ca">Home</a>
+<a href="https://serlf.ca/app.html">Dashboard</a>
+<a href="https://serlf.com">.com</a>
+<a href="https://serlf.org">.org</a>
+<a href="https://serlf.net">.net</a>
+<a href="https://serlf.info">.info</a>
+<a href="https://serlf.club">.club</a>
+<a href="https://serlf.shop">.shop</a>
+<a href="https://serlf.store">.store</a>
 </div>
-<p class="footer-bottom">🍁 Built in Canada · EOSE · © 2026 SERLF</p>
+<div class="footer-bottom">SERLF · by EOSE · 🇨🇦 Toronto · $1/mo for everything</div>
 </div></footer>
 </body>
 </html>
