--- a/org/index.html
+++ b/org/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>SERLF — Open Source. Sovereign AI for Everyone.</title>
-<meta name="description" content="SERLF open source community. Off the grid. On the chain. The Meek Principle.">
+<title>SERLF — Open Source AI Patterns</title>
+<meta name="description" content="SERLF For the Community. Novel Patterns, Academy, Community. All for $1/month.">
 <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
 <header class="site-header"><div class="header-inner">
-<div class="logo">SERLF<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">Open Source</span></div>
+<div class="logo">SERLF<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">For the Community</span></div>
 <nav>
 <a href="https://serlf.ca">.ca</a>
 <a href="https://serlf.com">.com</a>
@@ -22,76 +22,55 @@
 </div></header>
 
 <section class="hero">
-<h1>Off the Grid.<br>On the Chain.</h1>
-<p class="tagline">SERLF is built on the belief that sovereign AI belongs to everyone. Our core is open source. Our mission is liberation.</p>
+<p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">For the Community</p>
+<h1>Open Source AI Patterns.<br>Without the Enterprise Price.</h1>
+<div class="price">$1<span>/mo</span></div>
+<p class="tagline">Part of the SERLF suite — $1/mo gets you everything. Novel Patterns, Academy, Community.</p>
 <div class="flex-center mt-2">
-<a href="https://github.com/eose-sre" class="btn btn-primary">GitHub →</a>
-<a href="#contribute" class="btn btn-secondary">Contribute</a>
+<a href="https://serlf.ca/login.html" class="btn btn-gold">Get Everything — $1/mo</a>
+<a href="https://serlf.ca" class="btn btn-secondary">Explore serlf.ca</a>
 </div>
 </section>
 
-<section style="background:var(--bg2)">
+<section>
 <div class="container">
-<h2 class="section-title">The Meek Principle</h2>
-<div class="grid grid-2" style="margin-top:2rem">
-<div>
-<p style="font-size:1.1rem;line-height:1.8">The meek shall inherit the enterprise. Not through force — through patience, precision, and radical accessibility.</p>
-<p style="color:var(--fg2);margin-top:1rem;line-height:1.8">We believe that the tools of enterprise AI — fleet management, intelligent routing, cost control, agent orchestration — should cost $1/month, not $50,000/year.</p>
-<p style="color:var(--fg2);margin-top:1rem;line-height:1.8">SERLF is the sovereign enterprise reinforcement learning framework. Self + RL = SERLF. You learn, you grow, you become the enterprise.</p>
-</div>
-<div class="card" style="display:flex;flex-direction:column;justify-content:center">
-<h3 style="font-size:1.3rem;margin-bottom:1rem">Community Values</h3>
-<ul style="list-style:none;color:var(--fg2);line-height:2">
-<li>🧅 <strong>Meekness</strong> — Power through patience</li>
-<li>⚓ <strong>Sovereignty</strong> — Your keys, your data</li>
-<li>🍁 <strong>Accessibility</strong> — $1 for everyone</li>
-<li>🔓 <strong>Openness</strong> — Open source core</li>
-<li>🤝 <strong>Community</strong> — We build together</li>
-</ul>
-</div>
-</div>
-</div>
-</section>
-
-<section id="contribute">
-<div class="container">
-<h2 class="section-title">Contribute</h2>
-<p class="section-sub">Every contribution matters. Every voice counts.</p>
+<h2 class="section-title">Become the enterprise.</h2>
+<p class="section-sub">12 products. 30+ Novel Patterns. Zero tiers. Zero paywalls. One dollar.</p>
 <div class="grid grid-3">
-<div class="card">
-<div class="icon">💻</div>
-<h3>Code</h3>
-<p>Submit PRs, fix bugs, build features. Our repos are on GitHub under the EOSE organization.</p>
-<a href="https://github.com/eose-sre" class="tag" style="color:var(--cyan)">github.com/eose-sre →</a>
+<div class="card"><div class="icon">🔐</div><h3>Silo-as-a-Service</h3><p>Day 0 security. 6/6 silo score.</p></div>
+<div class="card"><div class="icon">🎖️</div><h3>Fleet Command</h3><p>Multi-agent orchestration.</p></div>
+<div class="card"><div class="icon">🐝</div><h3>Token Swarm</h3><p>87% cost savings. Smart routing.</p></div>
+<div class="card"><div class="icon">🚀</div><h3>Model Gateway</h3><p>9 providers, 1 endpoint.</p></div>
+<div class="card"><div class="icon">🌀</div><h3>Novel Patterns</h3><p>30+ production patterns.</p></div>
+<div class="card"><div class="icon">🪪</div><h3>Identity Fabric</h3><p>Zero-trust AI identity.</p></div>
 </div>
-<div class="card">
-<div class="icon">📝</div>
-<h3>Documentation</h3>
-<p>Help us write guides, tutorials, and reference docs. Great docs make the difference.</p>
-<span class="tag">Coming Soon</span>
-</div>
-<div class="card">
-<div class="icon">🧪</div>
-<h3>Testing</h3>
-<p>Try things, break things, report things. Beta testers are the backbone of quality.</p>
-<span class="tag">Join Beta</span>
-</div>
+<div class="text-center mt-2">
+<a href="https://serlf.ca" class="btn btn-primary">See All 12 Products →</a>
 </div>
 </div>
 </section>
 
 <section style="background:var(--bg2)">
-<div class="container text-center">
-<h2 class="section-title">License</h2>
-<p style="color:var(--fg2);max-width:600px;margin:1rem auto">SERLF's open source components are released under permissive licenses. Use them freely. Build on them. Make them yours. That's the point.</p>
+<div class="container text-center" style="padding:3rem 0">
+<p style="color:var(--gold);font-size:1.2rem;font-weight:600;margin-bottom:1rem">Part of the SERLF suite — $1/mo gets you everything</p>
+<p style="color:var(--fg2);max-width:600px;margin:0 auto 2rem">No tiers. No paywalls. No upsells. Every product, every feature, every pattern. The meek way.</p>
+<a href="https://serlf.ca/login.html" class="btn btn-gold">Get Started — $1/mo</a>
 </div>
 </section>
 
 <footer class="site-footer"><div class="footer-inner">
 <div class="footer-links">
-<a href="https://serlf.ca">serlf.ca</a><a href="https://serlf.com">serlf.com</a><a href="https://serlf.org">serlf.org</a><a href="https://serlf.net">serlf.net</a><a href="https://serlf.info">serlf.info</a><a href="https://serlf.club">serlf.club</a><a href="https://serlf.shop">serlf.shop</a><a href="https://serlf.store">serlf.store</a>
+<a href="https://serlf.ca">Home</a>
+<a href="https://serlf.ca/app.html">Dashboard</a>
+<a href="https://serlf.com">.com</a>
+<a href="https://serlf.org">.org</a>
+<a href="https://serlf.net">.net</a>
+<a href="https://serlf.info">.info</a>
+<a href="https://serlf.club">.club</a>
+<a href="https://serlf.shop">.shop</a>
+<a href="https://serlf.store">.store</a>
 </div>
-<p class="footer-bottom">🍁 Built in Canada · EOSE · Off the grid. On the chain. · © 2026 SERLF</p>
+<div class="footer-bottom">SERLF · by EOSE · 🇨🇦 Toronto · $1/mo for everything</div>
 </div></footer>
 </body>
 </html>
