--- a/store/index.html
+++ b/store/index.html
@@ -2,114 +2,75 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>SERLF Store — Digital Marketplace. Build. Sell. Earn.</title>
-<meta name="description" content="SERLF digital marketplace. Agent blueprints, sandbox environments, premium challenge packs. Creator economy for AI.">
+<title>SERLF — Digital Products</title>
+<meta name="description" content="SERLF Digital Arsenal. Captain Templates, Helm Charts, API Access. All for $1/month.">
 <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
 <header class="site-header"><div class="header-inner">
-<div class="logo">SERLF<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">Store</span></div>
+<div class="logo">SERLF<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">Digital Arsenal</span></div>
 <nav>
-<a href="https://serlf.ca">.ca</a><a href="https://serlf.com">.com</a><a href="https://serlf.org">.org</a><a href="https://serlf.net">.net</a><a href="https://serlf.info">.info</a><a href="https://serlf.club">.club</a><a href="https://serlf.shop">.shop</a><a href="https://serlf.store" class="active">.store</a>
+<a href="https://serlf.ca">.ca</a>
+<a href="https://serlf.com">.com</a>
+<a href="https://serlf.org">.org</a>
+<a href="https://serlf.net">.net</a>
+<a href="https://serlf.info">.info</a>
+<a href="https://serlf.club">.club</a>
+<a href="https://serlf.shop">.shop</a>
+<a href="https://serlf.store" class="active">.store</a>
 </nav>
 </div></header>
 
 <section class="hero">
-<h1>Build. Sell. Earn.</h1>
-<p class="tagline">The digital marketplace for sovereign AI. Agent blueprints, sandbox environments, challenge packs, and more — built by the community, for the community.</p>
+<p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">Digital Arsenal</p>
+<h1>Digital Products.<br>Without the Enterprise Price.</h1>
+<div class="price">$1<span>/mo</span></div>
+<p class="tagline">Part of the SERLF suite — $1/mo gets you everything. Captain Templates, Helm Charts, API Access.</p>
 <div class="flex-center mt-2">
-<a href="#browse" class="btn btn-primary">Browse Store</a>
-<a href="#sell" class="btn btn-gold">Become a Creator</a>
+<a href="https://serlf.ca/login.html" class="btn btn-gold">Get Everything — $1/mo</a>
+<a href="https://serlf.ca" class="btn btn-secondary">Explore serlf.ca</a>
 </div>
 </section>
 
-<section id="browse">
+<section>
 <div class="container">
-<h2 class="section-title">Digital Products</h2>
-<p class="section-sub">Everything you need to accelerate your sovereign AI journey.</p>
+<h2 class="section-title">Become the enterprise.</h2>
+<p class="section-sub">12 products. 30+ Novel Patterns. Zero tiers. Zero paywalls. One dollar.</p>
 <div class="grid grid-3">
-
-<div class="card">
-<div class="icon">🤖</div>
-<h3>Agent Blueprints</h3>
-<p>Pre-built agent configurations for common workflows. Customer support, data analysis, content generation, and more.</p>
-<p style="color:var(--gold);font-weight:700;margin-top:1rem">From $2</p>
-<span class="tag">Coming Soon</span>
-</div>
-
-<div class="card">
-<div class="icon">🏗️</div>
-<h3>Sandbox Environments</h3>
-<p>Pre-configured development environments. Skip setup, start building. Docker-ready, cloud-ready.</p>
-<p style="color:var(--gold);font-weight:700;margin-top:1rem">From $5</p>
-<span class="tag">Coming Soon</span>
-</div>
-
-<div class="card">
-<div class="icon">🎯</div>
-<h3>Challenge Packs</h3>
-<p>Premium Academy challenges. Advanced scenarios, real-world problems, competition-grade difficulty.</p>
-<p style="color:var(--gold);font-weight:700;margin-top:1rem">From $3</p>
-<span class="tag">Coming Soon</span>
-</div>
-
-<div class="card">
-<div class="icon">📋</div>
-<h3>Prompt Libraries</h3>
-<p>Curated, tested prompt collections for specific industries. Legal, healthcare, finance, creative.</p>
-<p style="color:var(--gold);font-weight:700;margin-top:1rem">From $1</p>
-<span class="tag">Coming Soon</span>
-</div>
-
-<div class="card">
-<div class="icon">🔌</div>
-<h3>Integration Templates</h3>
-<p>Ready-made integrations for popular tools. Slack, Teams, Notion, Jira, and beyond.</p>
-<p style="color:var(--gold);font-weight:700;margin-top:1rem">From $5</p>
-<span class="tag">Coming Soon</span>
-</div>
-
-<div class="card">
-<div class="icon">📚</div>
-<h3>Training Datasets</h3>
-<p>Curated datasets for fine-tuning and evaluation. Clean, documented, ready to use.</p>
-<p style="color:var(--gold);font-weight:700;margin-top:1rem">From $10</p>
-<span class="tag">Coming Soon</span>
-</div>
-
-</div>
-</div>
-</section>
-
-<section id="sell" style="background:var(--bg2)">
-<div class="container">
-<h2 class="section-title">Creator Economy</h2>
-<p class="section-sub">Build once. Sell forever. Keep 85% of every sale.</p>
-<div class="grid grid-3">
-<div class="card text-center">
-<div style="font-size:2.5rem;font-weight:900;color:var(--gold)">85%</div>
-<p>Revenue share for creators</p>
-</div>
-<div class="card text-center">
-<div style="font-size:2.5rem;font-weight:900;color:var(--gold)">$0</div>
-<p>Listing fee — free to publish</p>
-</div>
-<div class="card text-center">
-<div style="font-size:2.5rem;font-weight:900;color:var(--gold)">∞</div>
-<p>No limits on what you sell</p>
-</div>
+<div class="card"><div class="icon">🔐</div><h3>Silo-as-a-Service</h3><p>Day 0 security. 6/6 silo score.</p></div>
+<div class="card"><div class="icon">🎖️</div><h3>Fleet Command</h3><p>Multi-agent orchestration.</p></div>
+<div class="card"><div class="icon">🐝</div><h3>Token Swarm</h3><p>87% cost savings. Smart routing.</p></div>
+<div class="card"><div class="icon">🚀</div><h3>Model Gateway</h3><p>9 providers, 1 endpoint.</p></div>
+<div class="card"><div class="icon">🌀</div><h3>Novel Patterns</h3><p>30+ production patterns.</p></div>
+<div class="card"><div class="icon">🪪</div><h3>Identity Fabric</h3><p>Zero-trust AI identity.</p></div>
 </div>
 <div class="text-center mt-2">
-<a href="#" class="btn btn-gold">Apply to be a Creator →</a>
+<a href="https://serlf.ca" class="btn btn-primary">See All 12 Products →</a>
 </div>
+</div>
+</section>
+
+<section style="background:var(--bg2)">
+<div class="container text-center" style="padding:3rem 0">
+<p style="color:var(--gold);font-size:1.2rem;font-weight:600;margin-bottom:1rem">Part of the SERLF suite — $1/mo gets you everything</p>
+<p style="color:var(--fg2);max-width:600px;margin:0 auto 2rem">No tiers. No paywalls. No upsells. Every product, every feature, every pattern. The meek way.</p>
+<a href="https://serlf.ca/login.html" class="btn btn-gold">Get Started — $1/mo</a>
 </div>
 </section>
 
 <footer class="site-footer"><div class="footer-inner">
 <div class="footer-links">
-<a href="https://serlf.ca">serlf.ca</a><a href="https://serlf.com">serlf.com</a><a href="https://serlf.org">serlf.org</a><a href="https://serlf.net">serlf.net</a><a href="https://serlf.info">serlf.info</a><a href="https://serlf.club">serlf.club</a><a href="https://serlf.shop">serlf.shop</a><a href="https://serlf.store">serlf.store</a>
+<a href="https://serlf.ca">Home</a>
+<a href="https://serlf.ca/app.html">Dashboard</a>
+<a href="https://serlf.com">.com</a>
+<a href="https://serlf.org">.org</a>
+<a href="https://serlf.net">.net</a>
+<a href="https://serlf.info">.info</a>
+<a href="https://serlf.club">.club</a>
+<a href="https://serlf.shop">.shop</a>
+<a href="https://serlf.store">.store</a>
 </div>
-<p class="footer-bottom">🍁 Built in Canada · EOSE · © 2026 SERLF</p>
+<div class="footer-bottom">SERLF · by EOSE · 🇨🇦 Toronto · $1/mo for everything</div>
 </div></footer>
 </body>
 </html>
