--- a/com/index.html
+++ b/com/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>SERLF — Enterprise AI for Teams & Organizations</title>
-<meta name="description" content="SERLF for enterprise. Token Swarm, PEMOS, Fleet Control. Sovereign AI infrastructure at $1/month.">
+<title>SERLF — Enterprise AI for Teams</title>
+<meta name="description" content="SERLF For Teams & Organizations. Token Swarm, PEMOS, Fleet Control. All for $1/month.">
 <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
 <header class="site-header"><div class="header-inner">
-<div class="logo">SERLF<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">Enterprise</span></div>
+<div class="logo">SERLF<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">For Teams & Organizations</span></div>
 <nav>
 <a href="https://serlf.ca">.ca</a>
 <a href="https://serlf.com" class="active">.com</a>
@@ -23,101 +23,54 @@
 
 <section class="hero">
 <p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">For Teams & Organizations</p>
-<h1>Enterprise AI.<br>Without the Enterprise Price.</h1>
-<p class="tagline">Sovereign AI infrastructure your team can deploy in minutes. BYOK, intelligent routing, fleet management — all for $1/month per seat.</p>
+<h1>Enterprise AI for Teams.<br>Without the Enterprise Price.</h1>
+<div class="price">$1<span>/mo</span></div>
+<p class="tagline">Part of the SERLF suite — $1/mo gets you everything. Token Swarm, PEMOS, Fleet Control.</p>
 <div class="flex-center mt-2">
-<a href="#products" class="btn btn-primary">Explore Solutions</a>
-<a href="#contact" class="btn btn-secondary">Contact Sales</a>
+<a href="https://serlf.ca/login.html" class="btn btn-gold">Get Everything — $1/mo</a>
+<a href="https://serlf.ca" class="btn btn-secondary">Explore serlf.ca</a>
 </div>
 </section>
 
-<section id="products">
+<section>
 <div class="container">
-<h2 class="section-title">Enterprise Solutions</h2>
-<p class="section-sub">Three products built for teams that refuse to overpay.</p>
+<h2 class="section-title">Become the enterprise.</h2>
+<p class="section-sub">12 products. 30+ Novel Patterns. Zero tiers. Zero paywalls. One dollar.</p>
 <div class="grid grid-3">
-
-<div class="card">
-<div class="icon">🐝</div>
-<h3>Token Swarm</h3>
-<p>Intelligent multi-provider routing. Bring your own keys. Automatic failover. Cost caps and budget controls. Never get a surprise AI bill again.</p>
-<ul style="margin-top:1rem;color:var(--fg2);font-size:.85rem;list-style:none">
-<li>✓ Multi-provider (OpenAI, Anthropic, Google, etc.)</li>
-<li>✓ Automatic failover & load balancing</li>
-<li>✓ Per-team budget caps</li>
-<li>✓ Usage analytics & reporting</li>
-</ul>
+<div class="card"><div class="icon">🔐</div><h3>Silo-as-a-Service</h3><p>Day 0 security. 6/6 silo score.</p></div>
+<div class="card"><div class="icon">🎖️</div><h3>Fleet Command</h3><p>Multi-agent orchestration.</p></div>
+<div class="card"><div class="icon">🐝</div><h3>Token Swarm</h3><p>87% cost savings. Smart routing.</p></div>
+<div class="card"><div class="icon">🚀</div><h3>Model Gateway</h3><p>9 providers, 1 endpoint.</p></div>
+<div class="card"><div class="icon">🌀</div><h3>Novel Patterns</h3><p>30+ production patterns.</p></div>
+<div class="card"><div class="icon">🪪</div><h3>Identity Fabric</h3><p>Zero-trust AI identity.</p></div>
 </div>
-
-<div class="card" id="pemos">
-<div class="icon">⚓</div>
-<h3>PEMOS</h3>
-<p>Your sovereign AI fleet. Deploy, manage, and scale AI agents across your organization. No vendor lock-in, no data leakage, complete control.</p>
-<ul style="margin-top:1rem;color:var(--fg2);font-size:.85rem;list-style:none">
-<li>✓ Self-hosted or cloud deployment</li>
-<li>✓ Agent fleet orchestration</li>
-<li>✓ Audit trails & compliance</li>
-<li>✓ Role-based access control</li>
-</ul>
-</div>
-
-<div class="card">
-<div class="icon">🎛️</div>
-<h3>Fleet Control</h3>
-<p>Admiral dashboard for your entire AI operation. Monitor costs, performance, and agent health from a single command center.</p>
-<ul style="margin-top:1rem;color:var(--fg2);font-size:.85rem;list-style:none">
-<li>✓ Real-time fleet monitoring</li>
-<li>✓ Cost & usage dashboards</li>
-<li>✓ Alert & escalation rules</li>
-<li>✓ Multi-environment support</li>
-</ul>
-</div>
-
+<div class="text-center mt-2">
+<a href="https://serlf.ca" class="btn btn-primary">See All 12 Products →</a>
 </div>
 </div>
 </section>
 
 <section style="background:var(--bg2)">
-<div class="container">
-<h2 class="section-title">Case Studies</h2>
-<p class="section-sub">Organizations running sovereign AI.</p>
-<div class="grid grid-2">
-<div class="card">
-<span class="tag">Coming Soon</span>
-<h3 style="margin-top:1rem">Startup → Sovereign</h3>
-<p>How a 5-person startup replaced $3,000/mo in AI costs with $5/mo using Token Swarm.</p>
-</div>
-<div class="card">
-<span class="tag">Coming Soon</span>
-<h3 style="margin-top:1rem">Enterprise Migration</h3>
-<p>Moving from vendor-locked AI to PEMOS: a 200-person org's journey to sovereignty.</p>
-</div>
-</div>
-</div>
-</section>
-
-<section id="contact">
-<div class="container text-center">
-<h2 class="section-title">Ready to Talk?</h2>
-<p class="section-sub">No 6-month procurement cycle. No NDAs to view pricing. Just a conversation.</p>
-<p style="font-size:1.2rem;margin-bottom:1rem">📧 enterprise@serlf.ca</p>
-<p style="color:var(--fg2)">Or just sign up for $1. Seriously. There's no enterprise tier — everyone gets everything.</p>
-<a href="https://serlf.ca/#pricing" class="btn btn-gold mt-2">Start for $1 →</a>
+<div class="container text-center" style="padding:3rem 0">
+<p style="color:var(--gold);font-size:1.2rem;font-weight:600;margin-bottom:1rem">Part of the SERLF suite — $1/mo gets you everything</p>
+<p style="color:var(--fg2);max-width:600px;margin:0 auto 2rem">No tiers. No paywalls. No upsells. Every product, every feature, every pattern. The meek way.</p>
+<a href="https://serlf.ca/login.html" class="btn btn-gold">Get Started — $1/mo</a>
 </div>
 </section>
 
 <footer class="site-footer"><div class="footer-inner">
 <div class="footer-links">
-<a href="https://serlf.ca">serlf.ca</a>
-<a href="https://serlf.com">serlf.com</a>
-<a href="https://serlf.org">serlf.org</a>
-<a href="https://serlf.net">serlf.net</a>
-<a href="https://serlf.info">serlf.info</a>
-<a href="https://serlf.club">serlf.club</a>
-<a href="https://serlf.shop">serlf.shop</a>
-<a href="https://serlf.store">serlf.store</a>
+<a href="https://serlf.ca">Home</a>
+<a href="https://serlf.ca/app.html">Dashboard</a>
+<a href="https://serlf.com">.com</a>
+<a href="https://serlf.org">.org</a>
+<a href="https://serlf.net">.net</a>
+<a href="https://serlf.info">.info</a>
+<a href="https://serlf.club">.club</a>
+<a href="https://serlf.shop">.shop</a>
+<a href="https://serlf.store">.store</a>
 </div>
-<p class="footer-bottom">🍁 Built in Canada · EOSE · © 2026 SERLF</p>
+<div class="footer-bottom">SERLF · by EOSE · 🇨🇦 Toronto · $1/mo for everything</div>
 </div></footer>
 </body>
 </html>
