--- a/shop/index.html
+++ b/shop/index.html
@@ -2,92 +2,75 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>SERLF Shop — Merch for the Sovereign Fleet 🧅</title>
-<meta name="description" content="SERLF merch. Hoodies, stickers, hardware kits. SELF + RL = SERLF.">
+<title>SERLF — SERLF Merch & Tools</title>
+<meta name="description" content="SERLF Gear Up. CLI Tools, Templates, Merch. All for $1/month.">
 <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
 <header class="site-header"><div class="header-inner">
-<div class="logo">SERLF<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">Shop</span></div>
+<div class="logo">SERLF<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">Gear Up</span></div>
 <nav>
-<a href="https://serlf.ca">.ca</a><a href="https://serlf.com">.com</a><a href="https://serlf.org">.org</a><a href="https://serlf.net">.net</a><a href="https://serlf.info">.info</a><a href="https://serlf.club">.club</a><a href="https://serlf.shop" class="active">.shop</a><a href="https://serlf.store">.store</a>
+<a href="https://serlf.ca">.ca</a>
+<a href="https://serlf.com">.com</a>
+<a href="https://serlf.org">.org</a>
+<a href="https://serlf.net">.net</a>
+<a href="https://serlf.info">.info</a>
+<a href="https://serlf.club">.club</a>
+<a href="https://serlf.shop" class="active">.shop</a>
+<a href="https://serlf.store">.store</a>
 </nav>
 </div></header>
 
 <section class="hero">
-<h1>SELF + RL = SERLF</h1>
-<p class="tagline">Wear the sovereign fleet. Rep the meek. Look good doing it.</p>
+<p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">Gear Up</p>
+<h1>SERLF Merch & Tools.<br>Without the Enterprise Price.</h1>
+<div class="price">$1<span>/mo</span></div>
+<p class="tagline">Part of the SERLF suite — $1/mo gets you everything. CLI Tools, Templates, Merch.</p>
+<div class="flex-center mt-2">
+<a href="https://serlf.ca/login.html" class="btn btn-gold">Get Everything — $1/mo</a>
+<a href="https://serlf.ca" class="btn btn-secondary">Explore serlf.ca</a>
+</div>
 </section>
 
 <section>
 <div class="container">
-<h2 class="section-title">Merch</h2>
-<p class="section-sub">Physical goods for the sovereign operator.</p>
+<h2 class="section-title">Become the enterprise.</h2>
+<p class="section-sub">12 products. 30+ Novel Patterns. Zero tiers. Zero paywalls. One dollar.</p>
 <div class="grid grid-3">
-
-<div class="card text-center">
-<div style="font-size:4rem;margin-bottom:1rem">🧥</div>
-<h3>The Sovereign Hoodie</h3>
-<p>"SELF + RL = SERLF" on the back. Maple leaf on the sleeve. Navy dark. Cozy sovereign vibes.</p>
-<p style="font-size:1.5rem;font-weight:900;color:var(--gold);margin-top:1rem">$45 CAD</p>
-<a href="#" class="btn btn-secondary mt-2" style="width:100%">Coming Soon</a>
+<div class="card"><div class="icon">🔐</div><h3>Silo-as-a-Service</h3><p>Day 0 security. 6/6 silo score.</p></div>
+<div class="card"><div class="icon">🎖️</div><h3>Fleet Command</h3><p>Multi-agent orchestration.</p></div>
+<div class="card"><div class="icon">🐝</div><h3>Token Swarm</h3><p>87% cost savings. Smart routing.</p></div>
+<div class="card"><div class="icon">🚀</div><h3>Model Gateway</h3><p>9 providers, 1 endpoint.</p></div>
+<div class="card"><div class="icon">🌀</div><h3>Novel Patterns</h3><p>30+ production patterns.</p></div>
+<div class="card"><div class="icon">🪪</div><h3>Identity Fabric</h3><p>Zero-trust AI identity.</p></div>
 </div>
-
-<div class="card text-center">
-<div style="font-size:4rem;margin-bottom:1rem">🧅</div>
-<h3>Meek Sticker Pack</h3>
-<p>10 die-cut stickers. The Onion, Maple Leaf, Fleet Anchor, "Become the Enterprise," and more.</p>
-<p style="font-size:1.5rem;font-weight:900;color:var(--gold);margin-top:1rem">$8 CAD</p>
-<a href="#" class="btn btn-secondary mt-2" style="width:100%">Coming Soon</a>
-</div>
-
-<div class="card text-center">
-<div style="font-size:4rem;margin-bottom:1rem">⚓</div>
-<h3>Fleet Admiral Tee</h3>
-<p>Clean navy tee with the SERLF anchor. "Off the grid. On the chain." on the back.</p>
-<p style="font-size:1.5rem;font-weight:900;color:var(--gold);margin-top:1rem">$30 CAD</p>
-<a href="#" class="btn btn-secondary mt-2" style="width:100%">Coming Soon</a>
-</div>
-
-<div class="card text-center">
-<div style="font-size:4rem;margin-bottom:1rem">🍁</div>
-<h3>Canadian Operator Cap</h3>
-<p>Snapback cap. SERLF logo + maple leaf. For outdoor fleet operations.</p>
-<p style="font-size:1.5rem;font-weight:900;color:var(--gold);margin-top:1rem">$25 CAD</p>
-<a href="#" class="btn btn-secondary mt-2" style="width:100%">Coming Soon</a>
-</div>
-
-<div class="card text-center">
-<div style="font-size:4rem;margin-bottom:1rem">🔧</div>
-<h3>Hardware Starter Kit</h3>
-<p>Raspberry Pi + pre-loaded SERLF node image. Run your own sovereign edge node. The ultimate meek setup.</p>
-<p style="font-size:1.5rem;font-weight:900;color:var(--gold);margin-top:1rem">$99 CAD</p>
-<a href="#" class="btn btn-secondary mt-2" style="width:100%">Coming Soon</a>
-</div>
-
-<div class="card text-center">
-<div style="font-size:4rem;margin-bottom:1rem">☕</div>
-<h3>$1 Mug</h3>
-<p>"This mug costs the same as my AI platform." The ultimate flex.</p>
-<p style="font-size:1.5rem;font-weight:900;color:var(--gold);margin-top:1rem">$15 CAD</p>
-<a href="#" class="btn btn-secondary mt-2" style="width:100%">Coming Soon</a>
-</div>
-
+<div class="text-center mt-2">
+<a href="https://serlf.ca" class="btn btn-primary">See All 12 Products →</a>
 </div>
 </div>
 </section>
 
 <section style="background:var(--bg2)">
-<div class="container text-center">
-<p style="font-size:1.2rem">🛒 Full store launching soon. All proceeds support the SERLF open source ecosystem.</p>
+<div class="container text-center" style="padding:3rem 0">
+<p style="color:var(--gold);font-size:1.2rem;font-weight:600;margin-bottom:1rem">Part of the SERLF suite — $1/mo gets you everything</p>
+<p style="color:var(--fg2);max-width:600px;margin:0 auto 2rem">No tiers. No paywalls. No upsells. Every product, every feature, every pattern. The meek way.</p>
+<a href="https://serlf.ca/login.html" class="btn btn-gold">Get Started — $1/mo</a>
 </div>
 </section>
 
 <footer class="site-footer"><div class="footer-inner">
 <div class="footer-links">
-<a href="https://serlf.ca">serlf.ca</a><a href="https://serlf.com">serlf.com</a><a href="https://serlf.org">serlf.org</a><a href="https://serlf.net">serlf.net</a><a href="https://serlf.info">serlf.info</a><a href="https://serlf.club">serlf.club</a><a href="https://serlf.shop">serlf.shop</a><a href="https://serlf.store">serlf.store</a>
+<a href="https://serlf.ca">Home</a>
+<a href="https://serlf.ca/app.html">Dashboard</a>
+<a href="https://serlf.com">.com</a>
+<a href="https://serlf.org">.org</a>
+<a href="https://serlf.net">.net</a>
+<a href="https://serlf.info">.info</a>
+<a href="https://serlf.club">.club</a>
+<a href="https://serlf.shop">.shop</a>
+<a href="https://serlf.store">.store</a>
 </div>
-<p class="footer-bottom">🍁 Built in Canada · EOSE · © 2026 SERLF</p>
+<div class="footer-bottom">SERLF · by EOSE · 🇨🇦 Toronto · $1/mo for everything</div>
 </div></footer>
 </body>
 </html>
